--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "starterkit-plugin",
-  "version": "0.1.0",
-  "description": "StarterKit plugin for Caido",
-  "author": "Caido Labs Inc. <dev@caido.io>",
+  "name": "caido-themes",
+  "version": "1.0.0",
+  "description": "A plugin for managing and customizing themes in Caido",
+  "author": "bebiks",
   "license": "CC0-1.0",
   "type": "module",
   "scripts": {
