--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
-  "description": "StarterKit plugin for Caido",
-  "author": "Caido Labs Inc. <dev@caido.io>",
+  "version": "1.0.0",
+  "description": "Themes",
+  "author": "bebiks",
   "license": "CC0-1.0",
   "type": "module",
   "scripts": {
@@ -15,12 +15,14 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@tanstack/react-query": "^5.59.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "allotment": "^1.20.2",
     "caido-material-ui": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@caido/sdk-backend": "0.41.0",
