fix manifest author url

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "bebiks",
     "email": "bebiks@cvssadvisor.com",
-    "url": "https://github.com/bebiks/caidothemes"
+    "url": "https://github.com/bebiksior/CaidoThemes"
   },
   "plugins": [
     {
